cartopy/docs/v0.16/_sources/gallery/features.rst.txt


.. _sphx_glr_gallery_features.py:


Features
--------

A demonstration of some of the built-in Natural Earth features found
in cartopy.





.. image:: /gallery/images/sphx_glr_features_001.png
    :align: center





.. code-block:: python


    import cartopy.crs as ccrs
    import cartopy.feature as cfeature
    import matplotlib.pyplot as plt


    def main():
        fig = plt.figure()
        ax = fig.add_subplot(1, 1, 1, projection=ccrs.PlateCarree())
        ax.set_extent([-20, 60, -40, 45], crs=ccrs.PlateCarree())

        ax.add_feature(cfeature.LAND)
        ax.add_feature(cfeature.OCEAN)
        ax.add_feature(cfeature.COASTLINE)
        ax.add_feature(cfeature.BORDERS, linestyle=':')
        ax.add_feature(cfeature.LAKES, alpha=0.5)
        ax.add_feature(cfeature.RIVERS)

        plt.show()


    if __name__ == '__main__':
        main()

**Total running time of the script:** ( 0 minutes  0.091 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: features.py <features.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: features.ipynb <features.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
